package Creational.AbstractFactory.Interface;

public interface Vehicle {
    void name();
}
