package Creational.AbstractFactory.Interface;

public interface VehicleFactory {
    Vehicle getVehicle(String vehicleName);
}
